# odin-api

./: .arcconfig  .arclint  .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .pylintrc  Dockerfile  FlaskInstance.py  Jenkinsfile  Makefile  MongoInstance.py  README.md  build.sh  cdk.context.json  cdk.json  cdk_app.py  compose.yaml  conftest.py  datamodel.py  docker-compose.systemtest.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  karma.conf.js  logconf.yaml  nrlmsis.pyf  odin-api-stack.py  odin_config.py  odinapi-requirements.in  odinapi-requirements.txt  package-lock.json  package.json  plot.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  (+21 more)
.arcanist/eslint_linter/: LICENSE
.devcontainer/: compose.yaml  devcontainer.json  dockerfile
.github/: copilot-instructions.md
.github/workflows/: build.yml  cd.yaml  ci.yml  copilot-setup-steps.yml
datamodel/: __init__.py  views.py
odin_api_stack/: admin_host.py  api.py  config.py  mongo.py  odin_api.py  odin_api_stack.py  odin_cluster.py
scripts/: compile_nrlmsis.sh  deploy.sh  docker-compose.deploy.yml  get_osiris.sh  get_osiris_scanpos.py  move_s3.sh
services/proxy/: Dockerfile  README.md  build.sh  httpd.conf  odin.conf
spec/javascripts/: helpers_spec.js  level2_spec.js
src/: MANIFEST.in  api.py  conftest.py  date_tools.py  get_freqmode_info.m  level1b_scandata_exporter.py  level1b_scanlogdata_exporter.py  setup.py
src/examples/: filter_spectra.py  get_l1b_for_period.py  get_l2_data.py  get_l2_ozone.py  get_l2_ozone.py3  vds_example.py
src/notebooks/: Level2_area_endpoint_demo.ipynb  Level2_locations_endpoint_demo.ipynb
src/odinapi/: __init__.py  api.py  custom_json.py  odin_config.py  run.py  (+1 more)
templates/: base.html  index.html  plottest.html
ui/: package-lock.json  package.json  webpack.config.js
unittests/: Dockerfile  test.sh
(+248 files in other folders)
